Fixed css styling issues

--- a/css/style.css
+++ b/css/style.css
@@ -39,21 +39,23 @@ body {
 .container {
   max-width: 120rem;
   margin: 0 auto;
+  padding: 0 1.5rem;
 }
 
 .section {
   padding: 9.4rem 0;
 }
 
-header {
+.header {
   border: 1px solid var(--color-header-border);
+  padding: 2.5rem 0;
 }
 
 .header__container {
   display: flex;
   align-items: center;
   column-gap: 9rem;
-  padding: 2.5rem 0;
+  padding: 0 1.5rem;
 }
 
 .logo:link,
@@ -76,7 +78,7 @@ header {
   color: var(--color-logo-dark);
 }
 
-nav {
+.nav {
   flex: 1;
   display: flex;
   justify-content: space-between;
@@ -110,15 +112,15 @@ nav {
   color: var(--color-primary);
 }
 
-.nav__contacts {
+.header__contacts {
   display: flex;
   align-items: center;
   column-gap: 5rem;
   list-style: none;
 }
 
-.nav__contacts-item a:link,
-.nav__contacts-item a:visited {
+.header__contacts-item a:link,
+.header__contacts-item a:visited {
   font-size: 1.4rem;
   font-weight: 500;
   line-height: 1.17;
@@ -127,18 +129,19 @@ nav {
   transition: color 0.2s ease;
 }
 
-.nav__contacts-item a:hover,
-.nav__contacts-item a:active,
-.nav__contacts-item a:focus-visible {
+.header__contacts-item a:hover,
+.header__contacts-item a:active,
+.header__contacts-item a:focus-visible {
   color: var(--color-primary);
 }
 
-footer {
+.footer {
   background-color: var(--color-footer-bc);
+  padding: 6rem 0;
 }
 
 .footer__container {
-  padding: 6rem 0;
+  padding: 0 1.5rem;
 }
 
 .footer__logo {
@@ -310,22 +313,21 @@ footer {
   flex-wrap: wrap;
 }
 
-.team__member {
-  padding-bottom: 3rem;
-}
-
 .member {
   display: inline-block;
   background-color: var(--color-team-member-bc);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  max-width: 27rem;
 }
 
 .member__photo {
-  max-width: 27rem;
-  height: 26rem;
-  margin-bottom: 3rem;
+  width: 100%;
+}
+
+.member__text-box {
+  padding: 3rem 0;
 }
 
 .member__name {
@@ -347,8 +349,8 @@ footer {
 /*---------PORTFOLIO-PAGE--------*/
 .filter {
   list-style: none;
-  text-align: center;
-  margin-bottom: 5rem;
+  min-height: 5.4rem;
+  margin-bottom: 3.4rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -362,6 +364,7 @@ footer {
   background-color: var(--color-team-bc);
   font-weight: 500;
   font-size: 1.6rem;
+  line-height: 1.625;
   color: var(--color-btn-text-dark);
   padding: 6px 2.2rem;
   border-radius: 4px;
@@ -398,6 +401,7 @@ footer {
 .projects__item {
   background-color: var(--color-project-bc);
   border: 1px solid var(--color-project-border);
+  max-width: 37rem;
 }
 
 .project__img {
